prepare for tomoapp test

--- a/configs/jobmanager-config.yaml
+++ b/configs/jobmanager-config.yaml
@@ -23,6 +23,12 @@ python.executable: /opt/micromamba/envs/aps/bin/python
 python.client.executable: /opt/micromamba/envs/aps/bin/python
 taskmanager.memory.jvm-overhead.min: 1g
 taskmanager.memory.jvm-overhead.max: 8g   # raises -XX:MaxDirectMemorySize
+taskmanager.memory.process.size: 8g
+taskmanager.memory.task.heap.size: 8g
+taskmanager.memory.task.off-heap.size: 8g
+taskmanager.memory.managed.size: 8g
+taskmanager.memory.network.min: 256m
+taskmanager.memory.network.max: 256m
 python.fn-execution.bundle.size: 500
 python.fn-execution.arrow.batch.size: 500
 parallelism:
